// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders ./components/progress/demo/circle.md correctly 1`] = `
<div>
  <div class="ant-progress ant-progress-circle ant-progress-status-normal ant-progress-show-info ant-progress-default">
    <div class="ant-progress-inner" style="width: 120px; height: 120px; font-size: 24px;"><svg viewBox="0 0 100 100" class="ant-progress-circle">
        <path d="M 50,50 m 0,-47
       a 47,47 0 1 1 0,94
       a 47,47 0 1 1 0,-94" stroke="#f3f3f3" stroke-width="6" fill-opacity="0" class="ant-progress-circle-trail" style="stroke-dasharray: 295.3097094374406px 295.3097094374406px; stroke-dashoffset: -0px;"></path>
        <path d="M 50,50 m 0,-47
       a 47,47 0 1 1 0,94
       a 47,47 0 1 1 0,-94" stroke-linecap="round" stroke-width="6" fill-opacity="0" class="ant-progress-circle-path" style="stroke: #108ee9; stroke-dasharray: 221.48228207808043px 295.3097094374406px; stroke-dashoffset: -0px;"></path>
      </svg><span class="ant-progress-text">75%</span></div>
  </div>
  <div class="ant-progress ant-progress-circle ant-progress-status-exception ant-progress-show-info ant-progress-default">
    <div class="ant-progress-inner" style="width: 120px; height: 120px; font-size: 24px;"><svg viewBox="0 0 100 100" class="ant-progress-circle">
        <path d="M 50,50 m 0,-47
       a 47,47 0 1 1 0,94
       a 47,47 0 1 1 0,-94" stroke="#f3f3f3" stroke-width="6" fill-opacity="0" class="ant-progress-circle-trail" style="stroke-dasharray: 295.3097094374406px 295.3097094374406px; stroke-dashoffset: -0px;"></path>
        <path d="M 50,50 m 0,-47
       a 47,47 0 1 1 0,94
       a 47,47 0 1 1 0,-94" stroke-linecap="round" stroke-width="6" fill-opacity="0" class="ant-progress-circle-path" style="stroke: #ff5500; stroke-dasharray: 206.7167966062084px 295.3097094374406px; stroke-dashoffset: -0px;"></path>
      </svg><span class="ant-progress-text"><i class="anticon anticon-cross"></i></span></div>
  </div>
  <div class="ant-progress ant-progress-circle ant-progress-status-success ant-progress-show-info ant-progress-default">
    <div class="ant-progress-inner" style="width: 120px; height: 120px; font-size: 24px;"><svg viewBox="0 0 100 100" class="ant-progress-circle">
        <path d="M 50,50 m 0,-47
       a 47,47 0 1 1 0,94
       a 47,47 0 1 1 0,-94" stroke="#f3f3f3" stroke-width="6" fill-opacity="0" class="ant-progress-circle-trail" style="stroke-dasharray: 295.3097094374406px 295.3097094374406px; stroke-dashoffset: -0px;"></path>
        <path d="M 50,50 m 0,-47
       a 47,47 0 1 1 0,94
       a 47,47 0 1 1 0,-94" stroke-linecap="round" stroke-width="6" fill-opacity="0" class="ant-progress-circle-path" style="stroke: #87d068; stroke-dasharray: 295.3097094374406px 295.3097094374406px; stroke-dashoffset: -0px;"></path>
      </svg><span class="ant-progress-text"><i class="anticon anticon-check"></i></span></div>
  </div>
</div>
`;

exports[`renders ./components/progress/demo/circle-dynamic.md correctly 1`] = `
<div>
  <div class="ant-progress ant-progress-circle ant-progress-status-normal ant-progress-show-info ant-progress-default">
    <div class="ant-progress-inner" style="width: 120px; height: 120px; font-size: 24px;"><svg viewBox="0 0 100 100" class="ant-progress-circle">
        <path d="M 50,50 m 0,-47
       a 47,47 0 1 1 0,94
       a 47,47 0 1 1 0,-94" stroke="#f3f3f3" stroke-width="6" fill-opacity="0" class="ant-progress-circle-trail" style="stroke-dasharray: 295.3097094374406px 295.3097094374406px; stroke-dashoffset: -0px;"></path>
      </svg><span class="ant-progress-text">0%</span></div>
  </div>
  <div class="ant-btn-group"><button type="button" class="ant-btn ant-btn-default"><i class="anticon anticon-minus"></i></button><button type="button" class="ant-btn ant-btn-default"><i class="anticon anticon-plus"></i></button></div>
</div>
`;

exports[`renders ./components/progress/demo/circle-mini.md correctly 1`] = `
<div>
  <div class="ant-progress ant-progress-circle ant-progress-status-normal ant-progress-show-info ant-progress-default">
    <div class="ant-progress-inner" style="width: 80px; height: 80px; font-size: 18px;"><svg viewBox="0 0 100 100" class="ant-progress-circle">
        <path d="M 50,50 m 0,-47
       a 47,47 0 1 1 0,94
       a 47,47 0 1 1 0,-94" stroke="#f3f3f3" stroke-width="6" fill-opacity="0" class="ant-progress-circle-trail" style="stroke-dasharray: 295.3097094374406px 295.3097094374406px; stroke-dashoffset: -0px;"></path>
        <path d="M 50,50 m 0,-47
       a 47,47 0 1 1 0,94
       a 47,47 0 1 1 0,-94" stroke-linecap="round" stroke-width="6" fill-opacity="0" class="ant-progress-circle-path" style="stroke: #108ee9; stroke-dasharray: 88.59291283123217px 295.3097094374406px; stroke-dashoffset: -0px;"></path>
      </svg><span class="ant-progress-text">30%</span></div>
  </div>
  <div class="ant-progress ant-progress-circle ant-progress-status-exception ant-progress-show-info ant-progress-default">
    <div class="ant-progress-inner" style="width: 80px; height: 80px; font-size: 18px;"><svg viewBox="0 0 100 100" class="ant-progress-circle">
        <path d="M 50,50 m 0,-47
       a 47,47 0 1 1 0,94
       a 47,47 0 1 1 0,-94" stroke="#f3f3f3" stroke-width="6" fill-opacity="0" class="ant-progress-circle-trail" style="stroke-dasharray: 295.3097094374406px 295.3097094374406px; stroke-dashoffset: -0px;"></path>
        <path d="M 50,50 m 0,-47
       a 47,47 0 1 1 0,94
       a 47,47 0 1 1 0,-94" stroke-linecap="round" stroke-width="6" fill-opacity="0" class="ant-progress-circle-path" style="stroke: #ff5500; stroke-dasharray: 206.7167966062084px 295.3097094374406px; stroke-dashoffset: -0px;"></path>
      </svg><span class="ant-progress-text"><i class="anticon anticon-cross"></i></span></div>
  </div>
  <div class="ant-progress ant-progress-circle ant-progress-status-success ant-progress-show-info ant-progress-default">
    <div class="ant-progress-inner" style="width: 80px; height: 80px; font-size: 18px;"><svg viewBox="0 0 100 100" class="ant-progress-circle">
        <path d="M 50,50 m 0,-47
       a 47,47 0 1 1 0,94
       a 47,47 0 1 1 0,-94" stroke="#f3f3f3" stroke-width="6" fill-opacity="0" class="ant-progress-circle-trail" style="stroke-dasharray: 295.3097094374406px 295.3097094374406px; stroke-dashoffset: -0px;"></path>
        <path d="M 50,50 m 0,-47
       a 47,47 0 1 1 0,94
       a 47,47 0 1 1 0,-94" stroke-linecap="round" stroke-width="6" fill-opacity="0" class="ant-progress-circle-path" style="stroke: #87d068; stroke-dasharray: 295.3097094374406px 295.3097094374406px; stroke-dashoffset: -0px;"></path>
      </svg><span class="ant-progress-text"><i class="anticon anticon-check"></i></span></div>
  </div>
</div>
`;

exports[`renders ./components/progress/demo/dashboard.md correctly 1`] = `
<div>
  <div class="ant-progress ant-progress-circle ant-progress-status-normal ant-progress-show-info ant-progress-default">
    <div class="ant-progress-inner" style="width: 120px; height: 120px; font-size: 24px;"><svg viewBox="0 0 100 100" class="ant-progress-circle">
        <path d="M 50,50 m 0,47
       a 47,47 0 1 1 0,-94
       a 47,47 0 1 1 0,94" stroke="#f3f3f3" stroke-width="6" fill-opacity="0" class="ant-progress-circle-trail" style="stroke-dasharray: 220.30970943744057px 295.3097094374406px; stroke-dashoffset: -37.5px;"></path>
        <path d="M 50,50 m 0,47
       a 47,47 0 1 1 0,-94
       a 47,47 0 1 1 0,94" stroke-linecap="round" stroke-width="6" fill-opacity="0" class="ant-progress-circle-path" style="stroke: #108ee9; stroke-dasharray: 165.23228207808043px 295.3097094374406px; stroke-dashoffset: -37.5px;"></path>
      </svg><span class="ant-progress-text">75%</span></div>
  </div>
</div>
`;

exports[`renders ./components/progress/demo/dynamic.md correctly 1`] = `
<div>
  <div class="ant-progress ant-progress-line ant-progress-status-normal ant-progress-show-info ant-progress-default">
    <div>
      <div class="ant-progress-outer">
        <div class="ant-progress-inner">
          <div class="ant-progress-bg" style="width: 0%; height: 8px; border-radius: 100px;"></div>
        </div>
      </div><span class="ant-progress-text">0%</span>
    </div>
  </div>
  <div class="ant-btn-group"><button type="button" class="ant-btn ant-btn-default"><i class="anticon anticon-minus"></i></button><button type="button" class="ant-btn ant-btn-default"><i class="anticon anticon-plus"></i></button></div>
</div>
`;

exports[`renders ./components/progress/demo/format.md correctly 1`] = `
<div>
  <div class="ant-progress ant-progress-circle ant-progress-status-normal ant-progress-show-info ant-progress-default">
    <div class="ant-progress-inner" style="width: 120px; height: 120px; font-size: 24px;"><svg viewBox="0 0 100 100" class="ant-progress-circle">
        <path d="M 50,50 m 0,-47
       a 47,47 0 1 1 0,94
       a 47,47 0 1 1 0,-94" stroke="#f3f3f3" stroke-width="6" fill-opacity="0" class="ant-progress-circle-trail" style="stroke-dasharray: 295.3097094374406px 295.3097094374406px; stroke-dashoffset: -0px;"></path>
        <path d="M 50,50 m 0,-47
       a 47,47 0 1 1 0,94
       a 47,47 0 1 1 0,-94" stroke-linecap="round" stroke-width="6" fill-opacity="0" class="ant-progress-circle-path" style="stroke: #108ee9; stroke-dasharray: 221.48228207808043px 295.3097094374406px; stroke-dashoffset: -0px;"></path>
      </svg><span class="ant-progress-text">75 Days</span></div>
  </div>
  <div class="ant-progress ant-progress-circle ant-progress-status-success ant-progress-show-info ant-progress-default">
    <div class="ant-progress-inner" style="width: 120px; height: 120px; font-size: 24px;"><svg viewBox="0 0 100 100" class="ant-progress-circle">
        <path d="M 50,50 m 0,-47
       a 47,47 0 1 1 0,94
       a 47,47 0 1 1 0,-94" stroke="#f3f3f3" stroke-width="6" fill-opacity="0" class="ant-progress-circle-trail" style="stroke-dasharray: 295.3097094374406px 295.3097094374406px; stroke-dashoffset: -0px;"></path>
        <path d="M 50,50 m 0,-47
       a 47,47 0 1 1 0,94
       a 47,47 0 1 1 0,-94" stroke-linecap="round" stroke-width="6" fill-opacity="0" class="ant-progress-circle-path" style="stroke: #87d068; stroke-dasharray: 295.3097094374406px 295.3097094374406px; stroke-dashoffset: -0px;"></path>
      </svg><span class="ant-progress-text">Done</span></div>
  </div>
</div>
`;

exports[`renders ./components/progress/demo/line.md correctly 1`] = `
<div>
  <div class="ant-progress ant-progress-line ant-progress-status-normal ant-progress-show-info ant-progress-default">
    <div>
      <div class="ant-progress-outer">
        <div class="ant-progress-inner">
          <div class="ant-progress-bg" style="width: 30%; height: 8px; border-radius: 100px;"></div>
        </div>
      </div><span class="ant-progress-text">30%</span>
    </div>
  </div>
  <div class="ant-progress ant-progress-line ant-progress-status-active ant-progress-show-info ant-progress-default">
    <div>
      <div class="ant-progress-outer">
        <div class="ant-progress-inner">
          <div class="ant-progress-bg" style="width: 50%; height: 8px; border-radius: 100px;"></div>
        </div>
      </div><span class="ant-progress-text">50%</span>
    </div>
  </div>
  <div class="ant-progress ant-progress-line ant-progress-status-exception ant-progress-show-info ant-progress-default">
    <div>
      <div class="ant-progress-outer">
        <div class="ant-progress-inner">
          <div class="ant-progress-bg" style="width: 70%; height: 8px; border-radius: 100px;"></div>
        </div>
      </div><span class="ant-progress-text"><i class="anticon anticon-cross-circle"></i></span>
    </div>
  </div>
  <div class="ant-progress ant-progress-line ant-progress-status-success ant-progress-show-info ant-progress-default">
    <div>
      <div class="ant-progress-outer">
        <div class="ant-progress-inner">
          <div class="ant-progress-bg" style="width: 100%; height: 8px; border-radius: 100px;"></div>
        </div>
      </div><span class="ant-progress-text"><i class="anticon anticon-check-circle"></i></span>
    </div>
  </div>
  <div class="ant-progress ant-progress-line ant-progress-status-normal ant-progress-default">
    <div>
      <div class="ant-progress-outer">
        <div class="ant-progress-inner">
          <div class="ant-progress-bg" style="width: 50%; height: 8px; border-radius: 100px;"></div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders ./components/progress/demo/line-mini.md correctly 1`] = `
<div style="width: 170px;">
  <div class="ant-progress ant-progress-line ant-progress-status-normal ant-progress-show-info ant-progress-small">
    <div>
      <div class="ant-progress-outer">
        <div class="ant-progress-inner">
          <div class="ant-progress-bg" style="width: 30%; height: 6px; border-radius: 100px;"></div>
        </div>
      </div><span class="ant-progress-text">30%</span>
    </div>
  </div>
  <div class="ant-progress ant-progress-line ant-progress-status-active ant-progress-show-info ant-progress-small">
    <div>
      <div class="ant-progress-outer">
        <div class="ant-progress-inner">
          <div class="ant-progress-bg" style="width: 50%; height: 6px; border-radius: 100px;"></div>
        </div>
      </div><span class="ant-progress-text">50%</span>
    </div>
  </div>
  <div class="ant-progress ant-progress-line ant-progress-status-exception ant-progress-show-info ant-progress-small">
    <div>
      <div class="ant-progress-outer">
        <div class="ant-progress-inner">
          <div class="ant-progress-bg" style="width: 70%; height: 6px; border-radius: 100px;"></div>
        </div>
      </div><span class="ant-progress-text"><i class="anticon anticon-cross-circle"></i></span>
    </div>
  </div>
  <div class="ant-progress ant-progress-line ant-progress-status-success ant-progress-show-info ant-progress-small">
    <div>
      <div class="ant-progress-outer">
        <div class="ant-progress-inner">
          <div class="ant-progress-bg" style="width: 100%; height: 6px; border-radius: 100px;"></div>
        </div>
      </div><span class="ant-progress-text"><i class="anticon anticon-check-circle"></i></span>
    </div>
  </div>
</div>
`;

exports[`renders ./components/progress/demo/linecap.md correctly 1`] = `
<div>
  <div class="ant-progress ant-progress-line ant-progress-status-normal ant-progress-show-info ant-progress-default">
    <div>
      <div class="ant-progress-outer">
        <div class="ant-progress-inner">
          <div class="ant-progress-bg" style="width: 75%; height: 8px; border-radius: 0;"></div>
        </div>
      </div><span class="ant-progress-text">75%</span>
    </div>
  </div>
  <div class="ant-progress ant-progress-circle ant-progress-status-normal ant-progress-show-info ant-progress-default">
    <div class="ant-progress-inner" style="width: 120px; height: 120px; font-size: 24px;"><svg viewBox="0 0 100 100" class="ant-progress-circle">
        <path d="M 50,50 m 0,-47
       a 47,47 0 1 1 0,94
       a 47,47 0 1 1 0,-94" stroke="#f3f3f3" stroke-width="6" fill-opacity="0" class="ant-progress-circle-trail" style="stroke-dasharray: 295.3097094374406px 295.3097094374406px; stroke-dashoffset: -0px;"></path>
        <path d="M 50,50 m 0,-47
       a 47,47 0 1 1 0,94
       a 47,47 0 1 1 0,-94" stroke-linecap="square" stroke-width="6" fill-opacity="0" class="ant-progress-circle-path" style="stroke: #108ee9; stroke-dasharray: 221.48228207808043px 295.3097094374406px; stroke-dashoffset: -0px;"></path>
      </svg><span class="ant-progress-text">75%</span></div>
  </div>
  <div class="ant-progress ant-progress-circle ant-progress-status-normal ant-progress-show-info ant-progress-default">
    <div class="ant-progress-inner" style="width: 120px; height: 120px; font-size: 24px;"><svg viewBox="0 0 100 100" class="ant-progress-circle">
        <path d="M 50,50 m 0,47
       a 47,47 0 1 1 0,-94
       a 47,47 0 1 1 0,94" stroke="#f3f3f3" stroke-width="6" fill-opacity="0" class="ant-progress-circle-trail" style="stroke-dasharray: 220.30970943744057px 295.3097094374406px; stroke-dashoffset: -37.5px;"></path>
        <path d="M 50,50 m 0,47
       a 47,47 0 1 1 0,-94
       a 47,47 0 1 1 0,94" stroke-linecap="square" stroke-width="6" fill-opacity="0" class="ant-progress-circle-path" style="stroke: #108ee9; stroke-dasharray: 165.23228207808043px 295.3097094374406px; stroke-dashoffset: -37.5px;"></path>
      </svg><span class="ant-progress-text">75%</span></div>
  </div>
</div>
`;

exports[`renders ./components/progress/demo/segment.md correctly 1`] = `
<div class="ant-progress ant-progress-line ant-progress-status-normal ant-progress-show-info ant-progress-default">
  <div>
    <div class="ant-progress-outer">
      <div class="ant-progress-inner">
        <div class="ant-progress-bg" style="width: 60%; height: 8px; border-radius: 100px;"></div>
        <div class="ant-progress-success-bg" style="width: 30%; height: 8px; border-radius: 100px;"></div>
      </div>
    </div><span class="ant-progress-text">60%</span>
  </div>
</div>
`;
